Add Contacts attributes, some Fixes

--- a/components/subscriber/default.htm
+++ b/components/subscriber/default.htm
@@ -3,6 +3,7 @@
     <input type="hidden" name="latitude" id="latitude">
     <input type="hidden" name="longitude" id="longitude">
     <input type="hidden" name="project" value="{{ project }}">
+    <input type="hidden" name="attributes" value="{{ attributes }}">
 
     <div class="form-group text-field">
       <label for="email">Email Address</label>
